# deploy_and_train

./: .gitignore  LICENSE  README.md  eval.py  launch.sh  quantize.py  train.py
configs/: __init__.py
configs/CenterNet/: kitti_dlaseg.yaml  kitti_dlaseg_deformable.yaml
configs/RetinaNet/: kitti_mobilenetv3_bifpn.yaml
datasets/: __init__.py  build.py  metric.py
datasets/COCO/: __init__.py  coco.py  kitti_to_coco.py  transform.py
docker/: Dockerfile  launch.sh  requirements.txt
exports/CenterNet/: export.py
exports/ReitnaNet/: export.py
modules/: __init__.py  build.py  visualizer.py
modules/backbone/: __init__.py  dla.py  mobilenet.py
modules/head/: __init__.py  centernet.py  retinanet.py
modules/layer/: __init__.py  batch_norm.py  deform_conv.py
modules/meta_arch/: __init__.py  centernet.py  retinanet.py
modules/neck/: bifpn.py
trt/src/: CMakeLists.txt
trt/src/app/: CMakeLists.txt  benchmark.cpp
trt/src/app/centernet/: main.cpp
trt/src/app/traffic/: ptq.cpp
trt/src/builder/: CMakeLists.txt  builder.cpp  builder.h  calibrator.cpp  calibrator.h  main.cpp
trt/src/infer/: CMakeLists.txt  trt_engine.cpp  trt_engine.h
trt/src/plugins/: CMakeLists.txt  common.h  plugin.cpp  plugin.h
trt/src/plugins/bevdet/: bev_pool_v2.cpp  bev_pool_v2.cu  bev_pool_v2.h  bev_pool_v2_kernel.h
trt/src/plugins/centernet/: decode.cu  decode.h  decode_plugin.cpp  decode_plugin.h  deformable_conv2d.cu  deformable_conv2d.h  deformable_conv2d_plugin.cpp  deformable_conv2d_plugin.h
